--- a/package.json
+++ b/package.json
@@ -36,15 +36,22 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "audit": "0.0.6",
     "axios": "^0.15.3",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^4.1.0",
-    "express": "^4.16.3",
-    "express-session": "^1.15.1",
+    "docusign-esign": "^4.2.1",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
+    "fs-extra": "^7.0.1",
     "history": "^4.6.3",
+    "moment": "^2.24.0",
     "morgan": "^1.8.1",
+    "net": "^1.0.2",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
+    "path": "^0.12.7",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.6.2",
