--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-materialize": "^2.6.0",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.3.1",
+    "react-stopwatch": "^2.0.3",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.3.0",
