--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "semantic-ui-react": "^0.85.0",
     "sequelize": "^4.38.0",
     "socket.io": "^2.1.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "docusign-esign": "^4.2.1",
+    "moment": "^2.22.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.55",
